--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "packageManager": "pnpm@10.5.1",
   "devDependencies": {
     "@remotion/eslint-config-flat": "^4.0.300",
+    "@types/matter-js": "^0.19.8",
     "@types/node": "^22.15.17",
     "@types/react": "^19.1.3",
     "@types/web": "^0.0.233",
@@ -30,6 +31,7 @@
     "@remotion/zod-types": "^4.0.300",
     "elevenlabs": "^1.58.0",
     "get-audio-duration": "^4.0.1",
+    "matter-js": "^0.20.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "remotion": "^4.0.300",
