--- a/package.json
+++ b/package.json
@@ -5,41 +5,58 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx --env-file .env src/index.ts",
-    "remotion-preview": "remotion preview "
+    "dev:script": "tsx --env-file .env src/save-script.ts",
+    "dev:video": "systemd-inhibit --what=handle-lid-switch:sleep:idle --mode=block tsx --env-file .env src/render-video.ts",
+    "dev:remotion": "remotion preview --props=./public/script.json",
+    "render:landscape:transparent": "remotion render --image-format=png --pixel-format=yuva420p --codec=vp8 --props=./public/script.json Landscape out/transparent.webm",
+    "render:portrait:transparent": "remotion render --image-format=png --pixel-format=yuva420p --codec=vp8 --props=./public/script.json Portrait out/transparent.webm",
+    "render:landscape": "remotion render --props=./public/script.json Landscape out/landscape.mp4",
+    "render:portrait": "remotion render --props=./public/script.json Portrait out/portrait.mp4"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.5.1",
   "devDependencies": {
-    "@remotion/eslint-config-flat": "^4.0.300",
+    "@remotion/eslint-config-flat": "^4.0.306",
+    "@types/cli-progress": "^3.11.6",
     "@types/matter-js": "^0.19.8",
-    "@types/node": "^22.15.17",
-    "@types/react": "^19.1.3",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.5",
+    "@types/split-file": "^2.3.3",
+    "@types/wav": "^1.0.4",
     "@types/web": "^0.0.233",
-    "eslint": "^9.26.0",
+    "eslint": "^9.27.0",
     "prettier": "^3.5.3",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@google/genai": "^0.13.0",
-    "@remotion/cli": "^4.0.300",
-    "@remotion/google-fonts": "^4.0.300",
-    "@remotion/tailwind-v4": "^4.0.300",
-    "@remotion/zod-types": "^4.0.300",
-    "elevenlabs": "^1.58.0",
+    "@notionhq/client": "^3.1.1",
+    "@remotion/bundler": "^4.0.310",
+    "@remotion/cli": "^4.0.306",
+    "@remotion/google-fonts": "^4.0.306",
+    "@remotion/renderer": "^4.0.310",
+    "@remotion/tailwind-v4": "^4.0.306",
+    "@remotion/zod-types": "^4.0.306",
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "cli-progress": "^3.12.0",
+    "elevenlabs": "^1.59.0",
+    "fluent-ffmpeg": "^2.1.3",
     "get-audio-duration": "^4.0.1",
     "matter-js": "^0.20.0",
+    "openai": "^5.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "remotion": "^4.0.300",
+    "remotion": "^4.0.306",
     "sentence-splitter": "^5.0.0",
-    "tailwindcss": "^4.1.6",
+    "split-file": "^2.3.0",
+    "tailwindcss": "^4.1.7",
     "terminal-image": "^3.1.1",
     "uuid": "^11.1.0",
-    "zod": "^3.24.4"
+    "wav": "^1.0.2",
+    "zod": "^3.25.20"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
