Update reviewer prompt

--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "@ffprobe-installer/linux-x64"
+      "@ffprobe-installer/linux-x64",
+      "esbuild"
     ]
   }
 }
