--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.5.1",
   "devDependencies": {
-    "@remotion/eslint-config-flat": "^4.0.306",
+    "@remotion/eslint-config-flat": "4.0.314",
     "@types/cli-progress": "^3.11.6",
     "@types/matter-js": "^0.19.8",
     "@types/node": "^22.15.21",
@@ -31,13 +31,13 @@
     "@anthropic-ai/sdk": "^0.54.0",
     "@google/genai": "^0.13.0",
     "@notionhq/client": "^3.1.1",
-    "@remotion/bundler": "^4.0.310",
-    "@remotion/cli": "^4.0.306",
-    "@remotion/google-fonts": "^4.0.306",
-    "@remotion/media-parser": "^4.0.314",
-    "@remotion/renderer": "^4.0.310",
-    "@remotion/tailwind-v4": "^4.0.306",
-    "@remotion/zod-types": "^4.0.306",
+    "@remotion/bundler": "4.0.314",
+    "@remotion/cli": "4.0.314",
+    "@remotion/google-fonts": "4.0.314",
+    "@remotion/media-parser": "4.0.314",
+    "@remotion/renderer": "4.0.314",
+    "@remotion/tailwind-v4": "4.0.314",
+    "@remotion/zod-types": "4.0.314",
     "@types/fluent-ffmpeg": "^2.1.27",
     "cli-progress": "^3.12.0",
     "elevenlabs": "^1.59.0",
@@ -48,7 +48,7 @@
     "openai": "^5.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "remotion": "^4.0.306",
+    "remotion": "4.0.314",
     "sentence-splitter": "^5.0.0",
     "split-file": "^2.3.0",
     "tailwindcss": "^4.1.7",
