--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev:script": "tsx --env-file .env src/generate-script.ts",
     "dev:video": "tsx --env-file .env src/render-video.ts",
+    "dev:metrics": "tsx --env-file .env src/metrics.ts",
     "dev:remotion": "remotion preview --props=./public/script.json"
   },
   "keywords": [],
@@ -55,12 +56,14 @@
     "terminal-image": "^3.1.1",
     "uuid": "^11.1.0",
     "wav": "^1.0.2",
+    "yt-dlp-exec": "^1.0.2",
     "zod": "^3.25.20"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "@ffprobe-installer/linux-x64",
-      "esbuild"
+      "esbuild",
+      "yt-dlp-exec"
     ]
   }
 }
