--- a/package.json
+++ b/package.json
@@ -49,13 +49,14 @@
     "get-video-duration": "^4.1.0",
     "matter-js": "^0.20.0",
     "openai": "^5.10.2",
+    "puppeteer": "^24.16.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "remotion": "4.0.314",
     "sentence-splitter": "^5.0.0",
+    "shiki": "^3.10.0",
     "split-file": "^2.3.0",
     "tailwindcss": "^4.1.7",
-    "terminal-image": "^3.1.1",
     "uuid": "^11.1.0",
     "wav": "^1.0.2",
     "yt-dlp-exec": "^1.0.2",
