Script to download all outputs from done scripts

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:script": "tsx --env-file .env src/generate-script.ts",
     "dev:video": "tsx --env-file .env src/render-video.ts",
     "dev:metrics": "tsx --env-file .env src/metrics.ts",
+    "dev:output": "tsx --env-file .env src/download-output.ts",
     "dev:remotion": "remotion preview --props=./public/script.json"
   },
   "keywords": [],
