--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@notionhq/client": "^3.1.1",
     "@remotion/bundler": "4.0.314",
     "@remotion/cli": "4.0.314",
+    "@remotion/gif": "^4.0.340",
     "@remotion/google-fonts": "4.0.314",
     "@remotion/media-parser": "4.0.314",
     "@remotion/renderer": "4.0.314",
