--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.5.1",
   "devDependencies": {
-    "@remotion/eslint-config-flat": "4.0.314",
+    "@remotion/eslint-config-flat": "4.0.340",
     "@types/cli-progress": "^3.11.6",
     "@types/matter-js": "^0.19.8",
     "@types/node": "^22.15.21",
@@ -35,14 +35,14 @@
     "@googleapis/customsearch": "^5.0.1",
     "@mermaid-js/mermaid-cli": "^11.9.0",
     "@notionhq/client": "^3.1.1",
-    "@remotion/bundler": "4.0.314",
-    "@remotion/cli": "4.0.314",
-    "@remotion/gif": "^4.0.340",
-    "@remotion/google-fonts": "4.0.314",
-    "@remotion/media-parser": "4.0.314",
-    "@remotion/renderer": "4.0.314",
-    "@remotion/tailwind-v4": "4.0.314",
-    "@remotion/zod-types": "4.0.314",
+    "@remotion/bundler": "4.0.340",
+    "@remotion/cli": "4.0.340",
+    "@remotion/gif": "4.0.340",
+    "@remotion/google-fonts": "4.0.340",
+    "@remotion/media-parser": "4.0.340",
+    "@remotion/renderer": "4.0.340",
+    "@remotion/tailwind-v4": "4.0.340",
+    "@remotion/zod-types": "4.0.340",
     "@types/fluent-ffmpeg": "^2.1.27",
     "cli-progress": "^3.12.0",
     "elevenlabs": "^1.59.0",
@@ -54,7 +54,7 @@
     "puppeteer": "^24.16.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "remotion": "4.0.314",
+    "remotion": "4.0.340",
     "sentence-splitter": "^5.0.0",
     "sharp": "^0.34.3",
     "shiki": "^3.10.0",
